-
Bug
-
Resolution: Done
-
P2: Important
-
4.8.4, 5.0.2
-
None
-
Windows,OSX
-
69c05bbef47fb9d30d70e594bd5942add8b135fe, qt4:f8fdc82e88dd4546062ee220712c300a654472b9
QProgressDialog some time meets divide by zero and crashes. Attached example reproduces it on both Qt 4 and Qt5.
| For Gerrit Dashboard: QTBUG-31046 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 56068,5 | QtWidgets: avoid integer divide by zero in QProgressDialog | stable | qt/qtbase | Status: MERGED | +2 | 0 |